Link css to html file.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 	</head>
 	<title>Github pages</title>	
 
+	<link rel="stylesheet" type="text/css" href="index.css"/>
+
 	<body>
 		<h1> 
 			Hello github pages.
